# COMP575

./: .directory  .editorconfig  CMakeLists.txt  LICENSE  Light.hpp  Makefile  README.md  Rasterizer.cpp  Rasterizer.h  Renderer.h  Scene.cpp  Scene.h  a.out  main.cpp  new 1  test.ppm  test1.ppm
PA1/: CMakeLists.txt
PA1/apps/: CMakeLists.txt  image3.cpp
PA1/lib/gl3w/: CMakeCache.txt  Makefile  cmake_install.cmake
PA1/src/: Camera.h  Image.h  Light.h  Material.h  Ray.h  Surface.cpp  Surface.h
PA2/: CMakeLists.txt  README.md
PA2/apps/: main.cpp
PA2/src/: Barycentric.cpp  Barycentric.h  Renderer.h  Scene.h  Utility.hpp  main.cpp
PA3/: CMakeLists.txt  README.md
PA3/lib/freeglut/: CMakeCache.txt  cmake_install.cmake
PA3/src/: Mesh.hpp  main.cpp
PA4/: CMakeLists.txt  README.md
PA4/apps/: app-spheres.cpp  sibenik.cpp  sibenik_noshadow.cpp  sibenik_shadow.cpp  spheres.cpp
PA4/experimental/: surface_kd_mesh.hpp
PA4/include/: camera.h  kd_mesh.h  material.h  plane.h  ray.h  ray_tracer.h  scene.h  sphere.h  surface.h  triangle.h
PA4/lib/freeglut/: README.cmake
PA4/lib/freeglut/lib/: libglut.so.3.10.0
PA4/lib/glew/: README.md
PA4/src/: Camera.cpp  Camera.h  Camera.hpp  Light.hpp  Material.cpp  Material.h  Material.hpp  Mesh.hpp  Ray.h  Ray.hpp  RayTracer.cpp  RayTracer.h  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  Surface.h  load_kdtree.cpp  main.cpp  ray_tracer.cpp  ray_tracer.h  scene.cpp  scene.h
PA4/src/primitives/: Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Surface.hpp  Triangle.hpp  camera.cpp  camera.h  camera.hpp  kd_mesh.cpp  light.h  material.h  surface.h  surface_kd_mesh.cpp  surface_kd_mesh.h  surface_plane.h  surface_sphere.h  surface_triangle.h  surface_triangle.hpp
apps/: CMakeLists.txt  flatshading.cpp  gltracer.cpp  image3.cpp  main.cpp  noshading.cpp  test.cpp
lib/freeglut/: README.cmake
src/: BaryCentric.cpp  Barycentric.cpp  Barycentric.h  CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  Light.cpp  Light.h  Light.hpp  Material.cpp  Material.h  Primitives.h  Rasterizer.cpp  Rasterizer.h  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Surface.cpp  Surface.h  Surfaces.cpp  Surfaces.h  Utility.h  Utility.hpp  Vertex.hpp  main.cpp  raytracer.cpp
tests/: rasterizer_unittest.cpp  renderer_test.cpp  scene_unittest.cpp
